name:                email-header
version:             0.1.0
synopsis:            Parsing and rendering of email and MIME headers
description:         Parsing and rendering of email and MIME headers
license:             BSD3
license-file:        LICENSE
author:              Kyle Raftogianis <kylerafto@gmail.com>
maintainer:          Kyle Raftogianis <kylerafto@gmail.com>
stability:           experimental
homepage:            http://github.com/knrafto/email-header
bug-reports:         http://github.com/knrafto/email-header/issues
copyright:           Copyright (c) 2014 Kyle Raftogianis
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

extra-source-files:
  .gitignore
  .travis.yml
  README.md

source-repository head
  type: git
  location: git://github.com/knrafto/email-header.git

library
  hs-source-dirs: src
  ghc-options: -Wall

  build-depends:
    attoparsec,
    base,
    base64-bytestring,
    bytestring,
    case-insensitive,
    containers,
    text,
    text-icu,
    time

  exposed-modules:
    Network.Email.Charset
    Network.Email.Header.Parse
    Network.Email.Header.Render
    Network.Email.Header.Types

  other-modules:
    Network.Email.Header.Parse.Internal
    Network.Email.Header.Render.Doc
    Network.Email.Header.Render.Internal
    Network.Email.Header.Render.Layout

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  ghc-options: -Wall -threaded

  build-depends:
    base,
    bytestring,
    case-insensitive,
    containers,
    email-header,
    QuickCheck,
    tasty,
    tasty-quickcheck,
    text,
    time
