cabal-version:       3.0
name:                email-header
version:             0.4.2
synopsis:            Parsing and rendering of email and MIME headers
description:         Parsing and rendering of email and MIME headers
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kyle Raftogianis
maintainer:          Kyle Raftogianis <knrafto@gmail.com>
stability:           experimental
homepage:            http://github.com/knrafto/email-header
bug-reports:         http://github.com/knrafto/email-header/issues
copyright:           Copyright (c) 2014-2018 Kyle Raftogianis
category:            Network
build-type:          Simple
tested-with:         GHC == 8.10.7

extra-source-files:
  .gitignore
  .travis.yml
  README.md

source-repository head
  type: git
  location: git://github.com/knrafto/email-header.git

library
  hs-source-dirs: src
  ghc-options: -Wall

  build-depends:
    attoparsec        >= 0.9,
    base              >= 4.6,
    base64-bytestring >= 0.1.2,
    bytestring        >= 0.10,
    case-insensitive,
    containers        >= 0.4,
    exceptions,
    text              >= 0.11,
    text-icu          >= 0.7.1,
    time

  exposed-modules:
    Network.Email.Charset
    Network.Email.Header.Doc
    Network.Email.Header.Layout
    Network.Email.Header.Parser
    Network.Email.Header.Pretty
    Network.Email.Header.Read
    Network.Email.Header.Render
    Network.Email.Header.Types

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  ghc-options: -Wall -threaded

  build-depends:
    base,
    bytestring,
    case-insensitive,
    containers,
    email-header,
    QuickCheck,
    tasty,
    tasty-quickcheck,
    text,
    time
