name:                email
version:             0.1.0.0
synopsis:            Parsing and rendering of email and MIME messages
license:             BSD3
license-file:        LICENSE
author:              Kyle Raftogianis <kylerafto@gmail.com>
maintainer:          Kyle Raftogianis <kylerafto@gmail.com>
copyright:           (c) 2013 Kyle Raftogianis
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

library
  build-depends:
    base              >= 4      && < 5,
    time,
    bytestring        >= 0.10.2,
    text,
    text-icu,
    case-insensitive,
    attoparsec,
    base64-bytestring

  exposed-modules:
    Network.Email.Charset
    Network.Email.Parse
    Network.Email.Parse.Internal
    Network.Email.Types

  ghc-options:       -Wall
