name:                email
version:             0.1.0.0
synopsis:            Parsing of email and MIME messages
description:         Parsing of email and MIME messages
license:             BSD3
license-file:        LICENSE
author:              Kyle Raftogianis <kylerafto@gmail.com>
maintainer:          Kyle Raftogianis <kylerafto@gmail.com>
copyright:           (c) 2013 Kyle Raftogianis
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs: src

  build-depends:
    base,
    containers,
    mtl,
    time,
    bytestring,
    old-locale,
    text,
    text-icu,
    case-insensitive,
    attoparsec,
    base64-bytestring

  exposed-modules:
    Network.Email.Charset
    Network.Email.Layout
    Network.Email.Header
    Network.Email.Header.Render
    Network.Email.Header.Render.Doc
    Network.Email.Header.Render.Format
    Network.Email.Header.Parse
    Network.Email.Types

  ghc-options: -Wall -O2

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  ghc-options: -Wall -threaded

  build-depends:
    attoparsec,
    base,
    bytestring,
    email,
    HUnit,
    mtl,
    old-locale,
    QuickCheck,
    quickcheck-instances,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    time
